--- a/Stopwatch.html
+++ b/Stopwatch.html
@@ -19,6 +19,6 @@
         </div>
         <ul id="lapList" class="lap-times"></ul>
     </div>
-    <script src="stopwatch.js"></script>
+    <script src="Stopwatch.js"></script>
 </body>
 </html>
